--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <script src="js/nav.min.js" async defer></script>
     <link rel="manifest" href="images/site.webmanifest">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7715903281465624"
+     crossorigin="anonymous"></script>
     <script defer src="js/anime.min.js"></script>
     <script defer src="js/welcome.min.js"></script>
     <!-- <link rel="stylesheet" href="css/welcome.min.css"> -->
