--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                         class="fa-brands fa-instagram"></i></a></div>
             <div class="links"><a href="https://twitter.com/aarya_network"><i class="fa-brands fa-twitter"></i></a></div>
             <div class="links"><a href="https://t.me/project_aarya"><i class="fa-brands fa-telegram"></i></a></div>
-            <div class="links"><a href="https://discord.gg/BfccRgHY"><i class="fa-brands fa-discord"></i></a></div>
+            <div class="links"><a href="https://discord.gg/wDu7dD4ukN"><i class="fa-brands fa-discord"></i></a></div>
         </div>
     </footer>
     <div class="welcome-wrapper">
